// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
<styled.div
  active={false}
  onClick={[Function]}
  theme={
    Object {
      "primary": "#fff",
      "secondary": "#000",
      "tertiary": "#444",
    }
  }
>
  Click Me!
</styled.div>
`;

exports[`Button should render string children 1`] = `
<styled.div
  active={false}
  onClick={[Function]}
  theme={
    Object {
      "primary": "#fff",
      "secondary": "#000",
      "tertiary": "#444",
    }
  }
>
  String Text!
</styled.div>
`;

exports[`Button should render when active 1`] = `
<styled.div
  active={true}
  onClick={[Function]}
  theme={
    Object {
      "primary": "#fff",
      "secondary": "#000",
      "tertiary": "#444",
    }
  }
>
  Click Me!
</styled.div>
`;

exports[`Button should render when string children and active 1`] = `
<styled.div
  active={true}
  onClick={[Function]}
  theme={
    Object {
      "primary": "#fff",
      "secondary": "#000",
      "tertiary": "#444",
    }
  }
>
  Active Text!
</styled.div>
`;
